--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -625,37 +625,6 @@ es:
       firefox: "Firefox"
       safari: "Safari"
 
-  date:
-    yesterday: Ayer
-    formats: 
-      default: "%Y-%m-%d"
-      short: "%b %d"
-      long: "%B %d, %Y"
-    order: [ :day, :month, :year ]
-
-    day_names: [Domingo, Lunes, Martes, Miércoles, Jueves, Viernes, Sábado]
-    abbr_day_names: [Dom, Lun, Mar, Mié, Jue, Vie, Sáb]
-
-    month_names: [~, Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre]
-    abbr_month_names: [~, Ene, Feb, Mar, Abr, May, Jun, Jul, Ago, Sep, Oct, Nov, Dec]
-    order: [ :year, :month, :day ]
-
-  time:
-    formats:
-      default: "%a, %d %b %Y %H:%M:%S %z"
-      short: "%d %b %H:%M"
-      long: "%B %d, %Y %H:%M"
-    am: "am"
-    pm: "pm"
-
-  support:
-    select:
-      prompt: "Elige una opción"
-    array:
-      words_connector: ", "
-      two_words_connector: " y "
-      last_word_connector: " y "
-
   emailer:
     common: 
       do_not_answer: "No contestes a este email."
@@ -724,6 +693,7 @@ es:
           title: 'Expand your profile to 30 words'
   form:
     cancel: Cancelar
+
   page_title:
     show_projects: Resumen
     index_task_lists: Mis tareas
@@ -852,7 +822,6 @@ es:
       website: Web
       im: Mensajería Instantánea
       social_network: Red social
-      user: Usuario
       project: Proyecto
       task_list: Lista de tareas
       task: Tarea
@@ -863,6 +832,10 @@ es:
       note: Nota
       invitation: Invitación
       upload: Archivo
+      user:
+        attributes:
+          avatar:
+            attachment_content_type_invalid: Sube una imagen JPEG o PNG.
     attributes:
       card:
         street: Calle
@@ -925,8 +898,55 @@ es:
       upload:
         description: Descripción
     errors:
-      models:
-        user:
-          attributes:
-            avatar:
-              attachment_content_type_invalid: Sube una imagen JPEG o PNG.
+      messages:
+        inclusion: "no está incluido en la lista" 
+        exclusion: "está reservado" 
+        invalid: "no es válido" 
+        confirmation: "no coincide con la confirmación"
+        accepted: "debe ser aceptado"
+        empty: "no puede estar vacío"
+        blank: "no puede estar en blanco"
+        too_long: "es demasiado largo ({{count}} caracteres máximo)"
+        too_short: "es demasiado corto ({{count}} caracteres mínimo)"
+        wrong_length: "no tiene la longitud correcta ({{count}} caracteres exactos)"
+        taken: "ya está en uso"
+        not_a_number: "no es un número"
+        greater_than: "debe ser mayor que {{count}}"
+        greater_than_or_equal_to: "debe ser mayor que o igual a {{count}}"
+        equal_to: "debe ser igual a {{count}}"
+        less_than: "debe ser menor que {{count}}"
+        less_than_or_equal_to: "debe ser menor que o igual a {{count}}"
+        odd: "debe ser impar"
+        even: "debe ser par"
+        record_invalid: "La validación falló: {{errors}}"
+        
+  date:
+    yesterday: Ayer
+    formats: 
+      default: "%Y-%m-%d"
+      short: "%b %d"
+      long: "%B %d, %Y"
+    order: [ :day, :month, :year ]
+
+    day_names: [Domingo, Lunes, Martes, Miércoles, Jueves, Viernes, Sábado]
+    abbr_day_names: [Dom, Lun, Mar, Mié, Jue, Vie, Sáb]
+
+    month_names: [~, Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre]
+    abbr_month_names: [~, Ene, Feb, Mar, Abr, May, Jun, Jul, Ago, Sep, Oct, Nov, Dec]
+    order: [ :year, :month, :day ]
+
+  time:
+    formats:
+      default: "%a, %d %b %Y %H:%M:%S %z"
+      short: "%d %b %H:%M"
+      long: "%B %d, %Y %H:%M"
+    am: "am"
+    pm: "pm"
+    
+  support:
+    select:
+      prompt: "Elige una opción"
+    array:
+      words_connector: ", "
+      two_words_connector: " y "
+      last_word_connector: " y "
