added check box onto Profile/Notifications page to toggle if user wants to receive daily notifs about assigned tasks

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -106,6 +106,7 @@ en:
       notify_conversations: Notify me when I'm watching a conversation
       notify_task_lists: Notify me when I'm watching a task list
       notify_tasks: Notify me when I'm watching a task
+      wants_task_reminder: "Notify me daily of tasks assigned to me"
       avatar:
         field: Your avatar
         presence: "You can't upload a blank file"
