Adding textile reference for Notes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -376,6 +376,7 @@ en:
     fields:
       title: Title
       body: Body
+      text_styling: Text Styling
   dividers:
     actions:
       delete_confirm: Are you sure you want to delete this divider?
