--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -485,7 +485,7 @@ fr:
       commenter: Commentateur
       participant: Participant
       admin: Administrateur
-      remove: Expulsar
+      remove: Expulser
       transfer: Transférer le projet
       leave_project: Quitter le projet
       confirm_delete: Etes-vous sûr de vouloir éliminer cette personne du projet?
