Adding My Tasks snippet to Project#index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -367,6 +367,8 @@ en:
       hold: hold
       resolved: resolved
       rejected: rejected
+    my_tasks:
+      my_tasks: My tasks
   notes:
     actions:
       delete_confirm: Are you sure you want to delete this note?
