Sorting tasks from My Tasks in overview

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -336,7 +336,9 @@ en:
     assigned:
       assigned_to: "Assigned to {{user}}"
     due_on:
-      due_on: "Due on {{date}}"
+      due_on: Due on
+      today: Today
+      tomorrow: Tomorrow
     create: Add Task
     edit:
       submit: Update Task
