--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -217,6 +217,8 @@ es:
     fields:
       archiving: Archivar este proyecto
       forever: Borrar permanentemente este proyecto
+      owner: "Owner"
+      owner_description: "The owner is the only person that can modify this projects settings. Once you change the owner, you will no longer be able to modify project settings."
       name: Nombre
       name_description: "Escoge un nombre breve y descriptivo. Por ejemplo: Taggart Transcontinental"
       permalink: URL
@@ -248,7 +250,11 @@ es:
       title_settings: Preferencias Generales
       title_picture: Logotipo del Proyecto
       title_deletion: Archivar o borrar proyecto
+      title_ownership: Ownership
       submit: Guardar cambios
+      change_owner: Change owner
+      transferred: "Project ownership has been transferred."
+      invalid_transferred: "Project ownership could not be transferred, correct errors and try again."
   invitations:
     fields:
       user_or_email: "Introduce el email o usuario de tu compañero:"
@@ -575,6 +581,7 @@ es:
       general: Datos del proyecto
       picture: Imagen de proyecto
       deletion: Archivar o borrar proyecto
+      ownership: Ownership
     project_navigation:
       overview: Resumen
       all_conversations: Mis conversaciones
